--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -1,10 +1,11 @@
+@use "./variable" as *;
+
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-@use "./variable" as var;
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: var.$font-lato;
+  font-family: $font-lato;
 }
 
 a {
