--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -39,6 +39,25 @@
       }
     }
   }
+  &_bottom {
+    @include flex(center, space-between, 15px);
+    padding-top: 15px;
+    h2 {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.42857;
+      color: #4b5157;
+    }
+    p {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.42857;
+      color: #4b5157;
+    }
+    &_item {
+      @include flex(center, start, 25px);
+    }
+  }
 }
 
 .logo {
@@ -59,6 +78,56 @@
   background-color: #d9dadb;
 }
 
+.weather {
+  @include flex(center, start, 5px);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.42857;
+  color: #4b5157;
+}
 // oldindan reja qildim
 // code yozorodi
 // yana yozadi yozadi
+
+@media (max-width: 829px) {
+  .navbar {
+    &_top {
+      &_item {
+        form {
+          input {
+            display: none;
+          }
+        }
+      }
+    }
+    &_bottom {
+      flex-direction: column;
+      h2 {
+        display: none;
+      }
+      &_item {
+        justify-content: space-between;
+        width: 100%;
+      }
+    }
+  }
+  .logo {
+    p {
+      display: none;
+    }
+  }
+  .signin {
+    p {
+      display: none;
+    }
+  }
+}
+@media (max-width: 412px) {
+  .navbar {
+    &_top {
+      img {
+        display: none;
+      }
+    }
+  }
+}
